<resources>
    <string name="app_name">MyUnitTest</string>
    <string name="length">Panjang</string>
    <string name="width">Lebar</string>
    <string name="height">Tinggi</string>
    <string name="save">Simpan</string>
    <string name="calculate_volume">Hitung Volume</string>
    <string name="calculate_surface_area">Hitung Luas Area</string>
    <string name="calculate_circumference">Hitung keliling</string>
    <string name="result">Hasil</string>
</resources>